<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/activity_import_wallet_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_import_wallet_scroll_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingBottom="@dimen/padding_30"
        android:background="@color/background_color"
        tools:context=".ui.importwallet.ImportWalletActivity">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="@dimen/width_40"
            android:layout_height="@dimen/height_40"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/padding_10"
            android:src="@mipmap/ic_back_white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view_import_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:contentDescription="@string/content_description_import_success"
            android:src="@mipmap/ic_import_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_back" />

        <TextView
            android:id="@+id/text_view_import_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/import_successful"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_import_success" />

        <TextView
            android:id="@+id/text_view_pin_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/pin_provide_instruction"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_import_success" />

        <com.w3engineers.unicef.util.lib.boxpassword.BoxPassword
            android:id="@+id/edit_text_box_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:cursorVisible="false"
            android:gravity="center"
            android:maxLength="8"
            android:textColor="@color/new_user_button_color"
            android:textIsSelectable="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_pin_instruction" />


        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:text="@string/enter_password_here"
            app:layout_constraintTop_toBottomOf="@+id/text_view_pin_instruction"
            app:layout_constraintStart_toStartOf="@+id/password_layout"
            android:layout_marginStart="@dimen/margin_5"
            android:textColor="@color/white"
            android:textAppearance="@style/hint_style" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/width_50"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPassword"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_4"
                android:paddingStart="@dimen/padding_5"
                android:paddingEnd="@dimen/padding_5"
                android:background="@color/white"
                android:gravity="center|start"
                android:layout_gravity="center_vertical"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/new_user_button_color"
                android:textSize="@dimen/text_size_16" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_continue"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_40"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="22dp"
            android:textAllCaps="false"
            android:text="@string/continue_button"
            android:textColor="@color/white"
            android:background="@drawable/ractangular_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>