...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/chat_background">


        <ScrollView
            android:id="@+id/scrollview"
            style="@style/ScrollStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_30"
                app:layout_constraintTop_toTopOf="parent">

                <View
...
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/divider"
                    tools:text="RJ" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    style="@style/signup_editext_style"
                    android:textColorHint="@color/hint_text_color"
                    app:hintTextAppearance="@style/hint_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_pen"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile_background">
...
                    app:layout_constraintBottom_toBottomOf="@+id/last_name_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/last_name_layout" />


                <Button
                    android:id="@+id/button_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_40"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/ractangular_white"
                    android:text="@string/signup"
...
