...
            android:padding="@dimen/padding_5"
            android:src="@mipmap/ic_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/activity_import_profile_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_import_profile_scroll_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_view_logo"
                    android:layout_width="@dimen/width_250"
...
