<resources>
    <string name="app_name">FrameWork</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="drawable_exception">Drawable not found</string>
    <!--details data retrieve-->
    <string name="details_error_message">Could not retrieve data from server</string>

    <!--Base process name-->
    <string name="base_rm_process_name">:RmBaseService</string>

    <!--service description-->
    <string name="app_local_service_description">To retain RM library workable with high priority</string>

    <!--service broadcast upon task clear-->
</resources>